Add changelog for upstream 3.0 release

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,19 @@
+krb5-strength (3.0-1) UNRELEASED; urgency=medium
+
+  * New upstream release.
+    - SQLite password dictionaries are now supported and can be used to
+      reject passwords within edit distance one of any dictionary word.
+    - cdbmake-wordlist has been renamed to krb5-strength-wordlist and can
+      also generate SQLite databases compatible with this plugin and
+      Heimdal quality check program.
+    - heimdal-history, a password history implementation for Heimdal, has
+      been added and can be stacked with heimdal-strength to check both
+      history and password strength.
+    - New configuration option, minimum_different, which sets the minimum
+      number of different characters required in a password.
+
+ -- Russ Allbery <rra@debian.org>  Wed, 26 Mar 2014 00:04:13 -0700
+
 krb5-strength (2.2-1) unstable; urgency=low
 
   * New upstream release.
