--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+krb5-strength (3.0-2) UNRELEASED; urgency=medium
+
+  * Fix Upstream-Contact email address in debian/copyright.
+
+ -- Russ Allbery <rra@debian.org>  Sun, 13 Apr 2014 12:23:18 -0700
+
 krb5-strength (3.0-1) unstable; urgency=medium
 
   * New upstream release.
