--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,6 @@
 krb5-strength (3.0-2) UNRELEASED; urgency=medium
 
+  * Prefer *.tar.xz in debian/watch to match packaging.
   * Fix Upstream-Contact email address in debian/copyright.
 
  -- Russ Allbery <rra@debian.org>  Sun, 13 Apr 2014 12:23:18 -0700
