--- a/README
+++ b/README
@@ -411,6 +411,16 @@ CONFIGURATION
   The following additional settings are supported in the [appdefaults]
   section of krb5.conf when running under either Heimdal or MIT Kerberos.
 
+  cracklib_maxlen
+
+      Normally, all passwords are checked with CrackLib if a CrackLib
+      dictionary is defined.  However, CrackLib's rules were designed for
+      a world in which most passwords were four to eight characters long,
+      and tends to spuriously reject a lot of passphrases.  If this option
+      is set to something other than its default of 0, passwords longer
+      than that length bypass CrackLib checks.  (Using a SQLite dictionary
+      for longer passwords is strongly recommended.)
+
   minimum_different
 
       If set to a numeric value, passwords with fewer than this number of
